# mcabber-jingle

./: .gitignore  CMakeLists.txt  Doxyfile  README  action-handlers.c  check.c  check.h  config.h.in  doc.txt  error.c  error.h  jingle.c  jingle.h  jingle_register.c  jingle_register.h  parse.c  parse.h  register.c  sessions.c  socks5.c
jingle/: CMakeLists.txt  action-handlers.c  action-handlers.h  check.c  check.h  disco.c  disco.h  general-handlers.c  general-handlers.h  jingle.c  jingle.h  register.c  register.h  send.c  send.h  sessions.c  sessions.h
jingle-filetransfer/: CMakeLists.txt  filetransfer.c  filetransfer.h
jingle-filetransfert/: CMakeLists.txt  filetransfert.c  filetransfert.h
jingle-ft/: CMakeLists.txt  filetransfer.c  filetransfer.h
jingle-ibb/: CMakeLists.txt  ibb.c  ibb.h
jingle-s5b/: CMakeLists.txt  s5b.c  s5b.h  socks5-proto.c  socks5-proto.h  socks5.c  socks5.h
jingle-socks5/: CMakeLists.txt  socks5.c  socks5.h
