add_library(jingle-s5b MODULE s5b.c s5b.h)
pkg_check_modules(GIO REQUIRED gio-2.0)
link_directories(${GIO_LIBRARY_DIRS})
include_directories(SYSTEM ${GIO_SOURCE_DIR})
target_link_libraries(jingle-s5b ${GIO_LIBRARIES})
include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
install(TARGETS jingle-s5b DESTINATION lib/mcabber)
